// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Numerical snapshot test with html 1`] = `
<DocumentFragment>
  &lt;section style="
  flex-wrap: wrap;
  position: relative;
  padding: 1rem 1rem;
  margin-bottom: 0.5rem;
  background-color: hsl(0, 0%, 100%);
  border: solid hsl(0, 0%, 100%) 2px;
  border-radius: 6px;
  box-shadow: 0px 1px 3px hsl(0, 0%, 74%);
"&gt;
  &lt;div style="
  display: flex;
  font-weight: bold;
"&gt;
    &lt;span&gt;
      &lt;span style="
  color: #5271FF;
  "&gt;Sample Numerical Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span style="
  margin-left: auto;
  padding-left: 0.75rem;
  flex: none;
 margin-bottom: 10px;"&gt;
      &lt;span style="
  box-shadow: 0px 1px 3px hsl(0, 0%, 74%);
  padding-left: 0.7rem;
  padding-right: 0.7rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 4px;
  background-color: hsl(0, 0%, 100%);
  color: hsl(180, 15%, 41%);
"&gt;Numérique&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;
&lt;p style="
  color: hsl(0, 0%, 0%);
"&gt;&lt;span class="katex-display"&gt;&lt;span class="katex"&gt;&lt;span class="katex-mathml"&gt;&lt;math xmlns="http://www.w3.org/1998/Math/MathML" display="block"&gt;&lt;semantics&gt;&lt;mrow&gt;&lt;mfrac&gt;&lt;mrow&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;/mrow&gt;&lt;mrow&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;/mrow&gt;&lt;/mfrac&gt;&lt;/mrow&gt;&lt;annotation encoding="application/x-tex"&gt;\\frac{zzz}{yyy}&lt;/annotation&gt;&lt;/semantics&gt;&lt;/math&gt;&lt;/span&gt;&lt;span class="katex-html" aria-hidden="true"&gt;&lt;span class="base"&gt;&lt;span class="strut" style="height:1.988em;vertical-align:-0.8804em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mopen nulldelimiter"&gt;&lt;/span&gt;&lt;span class="mfrac"&gt;&lt;span class="vlist-t vlist-t2"&gt;&lt;span class="vlist-r"&gt;&lt;span class="vlist" style="height:1.1076em;"&gt;&lt;span style="top:-2.314em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mord mathnormal" style="margin-right:0.03588em;"&gt;yyy&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span style="top:-3.23em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="frac-line" style="border-bottom-width:0.04em;"&gt;&lt;/span&gt;&lt;/span&gt;&lt;span style="top:-3.677em;"&gt;&lt;span class="pstrut" style="height:3em;"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mord mathnormal" style="margin-right:0.04398em;"&gt;zzz&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span class="vlist-s"&gt;​&lt;/span&gt;&lt;/span&gt;&lt;span class="vlist-r"&gt;&lt;span class="vlist" style="height:0.8804em;"&gt;&lt;span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span class="mclose nulldelimiter"&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/p&gt;
      &lt;div&gt;
          &lt;span style="
  color: hsl(0, 0%, 0%);
"&gt;Réponse: &lt;/span&gt;&lt;input class="gift-input" type="text" style="
  display: inline-block;
  padding: 0.375rem 0.75rem;
  line-height: 1.5;
  color: hsl(0, 0%, 16%);
  background-color: hsl(0, 0%, 100%);
  border: 1px solid hsl(0, 0%, 81%);
  border-radius: 0.25rem;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  width: 90%;
" placeholder="42, 43"&gt;
      &lt;/div&gt;
      &lt;div style="
  position: relative;
  margin-top: 1rem;
  padding: 0 1rem;
  background-color: hsl(43, 100%, 94%);
  color: hsl(43, 95%, 9%);
  border: hsl(36, 84%, 93%) 1px solid;
  border-radius: 6px;
  box-shadow: 0px 2px 5px hsl(0, 0%, 74%);
"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`Numerical snapshot test with image 1`] = `
<DocumentFragment>
  &lt;section style="
  flex-wrap: wrap;
  position: relative;
  padding: 1rem 1rem;
  margin-bottom: 0.5rem;
  background-color: hsl(0, 0%, 100%);
  border: solid hsl(0, 0%, 100%) 2px;
  border-radius: 6px;
  box-shadow: 0px 1px 3px hsl(0, 0%, 74%);
"&gt;
  &lt;div style="
  display: flex;
  font-weight: bold;
"&gt;
    &lt;span&gt;
      &lt;span style="
  color: #5271FF;
  "&gt;Sample Numerical Title with Image&lt;/span&gt;
    &lt;/span&gt;
    &lt;span style="
  margin-left: auto;
  padding-left: 0.75rem;
  flex: none;
 margin-bottom: 10px;"&gt;
      &lt;span style="
  box-shadow: 0px 1px 3px hsl(0, 0%, 74%);
  padding-left: 0.7rem;
  padding-right: 0.7rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 4px;
  background-color: hsl(0, 0%, 100%);
  color: hsl(180, 15%, 41%);
"&gt;Numérique&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;
&lt;p style="
  color: hsl(0, 0%, 0%);
"&gt;Sample Stem with Image&lt;/p&gt;
      &lt;div&gt;
          &lt;span style="
  color: hsl(0, 0%, 0%);
"&gt;Réponse: &lt;/span&gt;&lt;input class="gift-input" type="text" style="
  display: inline-block;
  padding: 0.375rem 0.75rem;
  line-height: 1.5;
  color: hsl(0, 0%, 16%);
  background-color: hsl(0, 0%, 100%);
  border: 1px solid hsl(0, 0%, 81%);
  border-radius: 0.25rem;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  width: 90%;
" placeholder="42, 43, 44"&gt;
      &lt;/div&gt;
      &lt;div style="
  position: relative;
  margin-top: 1rem;
  padding: 0 1rem;
  background-color: hsl(43, 100%, 94%);
  color: hsl(43, 95%, 9%);
  border: hsl(36, 84%, 93%) 1px solid;
  border-radius: 6px;
  box-shadow: 0px 2px 5px hsl(0, 0%, 74%);
"&gt;
        &lt;p&gt;Sample Global Feedback with Image&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`Numerical snapshot test with moodle 1`] = `
<DocumentFragment>
  &lt;section style="
  flex-wrap: wrap;
  position: relative;
  padding: 1rem 1rem;
  margin-bottom: 0.5rem;
  background-color: hsl(0, 0%, 100%);
  border: solid hsl(0, 0%, 100%) 2px;
  border-radius: 6px;
  box-shadow: 0px 1px 3px hsl(0, 0%, 74%);
"&gt;
  &lt;div style="
  display: flex;
  font-weight: bold;
"&gt;
    &lt;span&gt;
      &lt;span style="
  color: #5271FF;
  "&gt;Sample Numerical Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span style="
  margin-left: auto;
  padding-left: 0.75rem;
  flex: none;
 margin-bottom: 10px;"&gt;
      &lt;span style="
  box-shadow: 0px 1px 3px hsl(0, 0%, 74%);
  padding-left: 0.7rem;
  padding-right: 0.7rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 4px;
  background-color: hsl(0, 0%, 100%);
  color: hsl(180, 15%, 41%);
"&gt;Numérique&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;
&lt;p style="
  color: hsl(0, 0%, 0%);
"&gt;Sample Stem&lt;/p&gt;
      &lt;div&gt;
          &lt;span style="
  color: hsl(0, 0%, 0%);
"&gt;Réponse: &lt;/span&gt;&lt;input class="gift-input" type="text" style="
  display: inline-block;
  padding: 0.375rem 0.75rem;
  line-height: 1.5;
  color: hsl(0, 0%, 16%);
  background-color: hsl(0, 0%, 100%);
  border: 1px solid hsl(0, 0%, 81%);
  border-radius: 0.25rem;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  width: 90%;
" placeholder="42, 43"&gt;
      &lt;/div&gt;
      &lt;div style="
  position: relative;
  margin-top: 1rem;
  padding: 0 1rem;
  background-color: hsl(43, 100%, 94%);
  color: hsl(43, 95%, 9%);
  border: hsl(36, 84%, 93%) 1px solid;
  border-radius: 6px;
  box-shadow: 0px 2px 5px hsl(0, 0%, 74%);
"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`Numerical snapshot test with plain text 1`] = `
<DocumentFragment>
  &lt;section style="
  flex-wrap: wrap;
  position: relative;
  padding: 1rem 1rem;
  margin-bottom: 0.5rem;
  background-color: hsl(0, 0%, 100%);
  border: solid hsl(0, 0%, 100%) 2px;
  border-radius: 6px;
  box-shadow: 0px 1px 3px hsl(0, 0%, 74%);
"&gt;
  &lt;div style="
  display: flex;
  font-weight: bold;
"&gt;
    &lt;span&gt;
      &lt;span style="
  color: #5271FF;
  "&gt;Sample Numerical Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span style="
  margin-left: auto;
  padding-left: 0.75rem;
  flex: none;
 margin-bottom: 10px;"&gt;
      &lt;span style="
  box-shadow: 0px 1px 3px hsl(0, 0%, 74%);
  padding-left: 0.7rem;
  padding-right: 0.7rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
  border-radius: 4px;
  background-color: hsl(0, 0%, 100%);
  color: hsl(180, 15%, 41%);
"&gt;Numérique&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;
&lt;p style="
  color: hsl(0, 0%, 0%);
"&gt;Sample Stem&lt;/p&gt;
      &lt;div&gt;
          &lt;span style="
  color: hsl(0, 0%, 0%);
"&gt;Réponse: &lt;/span&gt;&lt;input class="gift-input" type="text" style="
  display: inline-block;
  padding: 0.375rem 0.75rem;
  line-height: 1.5;
  color: hsl(0, 0%, 16%);
  background-color: hsl(0, 0%, 100%);
  border: 1px solid hsl(0, 0%, 81%);
  border-radius: 0.25rem;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  width: 90%;
" placeholder="42, 43"&gt;
      &lt;/div&gt;
      &lt;div style="
  position: relative;
  margin-top: 1rem;
  padding: 0 1rem;
  background-color: hsl(43, 100%, 94%);
  color: hsl(43, 95%, 9%);
  border: hsl(36, 84%, 93%) 1px solid;
  border-radius: 6px;
  box-shadow: 0px 2px 5px hsl(0, 0%, 74%);
"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;
